--- a/css/Footer.css
+++ b/css/Footer.css
@@ -16,3 +16,22 @@
     color: #ffffff;
     text-decoration: none;
   }
+
+  @media screen and (max-width: 375px){
+    footer .logo img {
+      width: 60px;
+      height: 60px;
+      margin: 5px 10px;
+    }
+    .footer .logo .navbar-brand {
+      color: #ffffff;
+      font-weight: bold;
+      line-height: normal;
+      font-size: 18px;
+      text-align: start;
+      margin-bottom: 20px;
+    }
+    .footer{
+      text-align: center;
+    }
+  }
