--- a/css/Navbar.css
+++ b/css/Navbar.css
@@ -60,8 +60,8 @@
 
 .main-navbar .navbar-scrolled{
     top: 00px;
-    background-color: #111 !important;
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.15);
+    background-color: #201f1f !important;
+    box-shadow: 0 3px 10px rgba(233, 233, 233, 0.8);
 }
 
 
