--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,31 @@
+#preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    z-index: 9999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  #loader {
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid #3498db;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
+
 .bg-image img{
     height: 380px;
     width: 100%;
@@ -100,6 +128,11 @@
     font-size: 45px;
     margin-top: 40px;
 }
+.contact-1 .card p{
+    font-size: 18px;
+    font-weight: 400;
+}
+
 @media screen and (max-width: 600px){
     .mision{
         margin-top: 20px;
