--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,10 @@
     100% { transform: rotate(360deg); }
   }
   
-
+  .carousel-caption{
+    color: #fff;
+    top: 40%;
+  }
 
 .bg-image img{
     height: 380px;
@@ -144,8 +147,13 @@
     text-align: center;
   }
   .h-2 .row{
-    padding-top: 20px;
-    padding-bottom: 10px;
+    /* padding-top: 20px;
+    padding-bottom: 10px; */
+  }
+  .h-2 hr{
+    padding: 0;
+    margin: 0;
+    margin-top: 10px;
   }
   .h-2 .row i{
     font-size: 55px;
